--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     background-repeat: no-repeat;
     font-family: arial, helvetica, sans-serif;
 }
+
 body::before {
     content: "";
     position: absolute;
@@ -15,15 +16,18 @@ body::before {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
 }
+
 header {
     padding: 25px;
     z-index: 10;
 
     
 }
+
 .header img{
     height: 50px;
 }
+
 .login {
     padding: 60px;
     z-index: 10;
@@ -33,37 +37,146 @@ header {
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 10px;
 }
+
 .login h2{
     color: white;
-    text-align: center;
+    
     font-size: 30px;
 }
+
 .login input {
     color: white;
     width: 100%;
     backgraund-color: #333;
     padding-left: 15px;
+    box-sizing: border-box;
     border-radius: 6px;
     border: none;
     height: 50px;
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 16px;
 }
+
 .login button {
    color: white;
-   background-color: red;
-    width: 350px;
-    border-radius: 6px;         
+   background-color: #e50914;   
+    width: 100%;
+    border-radius: 4px;         
     border: none;
     height: 50px;
     margin-bottom: 20px;
-    font-size: 18px;
+    font-size: 17px;
 }
-.login button::hover{
+
+.login button:hover{
     cursor: pointer;
 }
-.login footer{
+
+.support{
+    display: flex;
+    color: #b3b3b3;
+    justify-content: space-between;
+    font-size: 13px;
+    align-items: center;
+}
+
+.support input{
+    margin: 0px;
+    width: 16px;
+    height: 16px;
+}
+
+.support a{
+    text-decoration: none;
+    color: #b3b3b3;
+}
+
+.support a:hover{
+    text-decoration: underline;
+}
+
+.login-footer{
+    color: #b3b3b3;
+    font-size: 13px;
+    
+    margin-top: 40px;
+}
+
+.signup{
+    color: #737373;
+}
+
+.signup a{
+    text-decoration: none;
     color: white;
-    text-align: center;
-    font-size: 16px;
+    margin-left: 10px;
+}
+.signup a:hover{
+    text-decoration: underline;
+}
+
+.terms{
+    color: #8c8c8c;
+    font-size: 13px;
+}
+
+.terms a{
+    text-decoration: none;
+    color: #b3b3b3;
+}
+
+.terms a:hover{
+    text-decoration: none;
+    color: #0071eb;
+}
+
+/*--- Footer---*/
+
+.page-footer{
+    background-color: rgba(0.0.0.90);
+    padding: 20px 0;
+    margin-top: 80px;
+    font-size: 1em;
+    color: #737373;
+    z-index: 90;
+}
+
+.page-footer-box{
+    margin: 0 auto;
+    max-width: 800px;
+}
+.page-footer-box p{
+    margin: 40px;
+    margin-bottom: 30px;
+}
+
+.footer-links{
+    list-style: none;
+}
+
+.footer-link-item{
+    display: inline-block;
+    max-width: 100px;
+    margin-bottom: 20px;
+    padding: 0 20px 0 0;
+    width: 25%;
+}
+
+.footer-links a{
+    text-decoration: none;
+    color: #737373;
+}
+
+.language{
+    margin-left: 40px;
+}
+
+.page-footer select{
+    background-color: #000;
+    border: 1px solid #333;
+    padding: 10px 30px 10px 10px;
+    line-height: 1.7;
+    font-size: 13px;
+    color: #737373;
+
 }
